# async.queue

./: .gitlab-ci.yml  CMakeLists.txt  README.md
include/: CMakeLists.txt
include/async/: queue.hpp
include/async/queue/: error.hpp  preserved_binder.hpp  queue.hpp  value_factory.hpp
include/async/queue/detail/: associated_binder.hpp  check_callable.hpp  check_signature.hpp  compressed_pair.hpp  function.hpp  function_queue.hpp  preserved_binder.hpp
include/memory_resource/: fifo_pool_resource.hpp  memory_resource.hpp
tests/queue/: CMakeLists.txt  test.cpp
